Fix width of search results on small screen

--- a/src/stylesheets/components/_search.scss
+++ b/src/stylesheets/components/_search.scss
@@ -88,6 +88,10 @@
     overflow-x: hidden;
     padding: .25em;
     padding-bottom: 0;
+
+    @media #{$small-down} {
+      width: 100%;
+    }
   }
 
   .Search-results:not(.is-active) {
